testsuite/tests/th/T5358.stderr

T5358.hs:14:15:
    Exception when trying to run compile-time code:
      runTest called error: forall t_0 . t_0 -> GHC.Types.Bool
    Code: do { VarI _ t _ _ <- reify (mkName "prop_x1");
               ($) error ((++) "runTest called error: " pprint t) }
    In the expression:
      $(do { VarI _ t _ _ <- reify (mkName "prop_x1");
             error $ ("runTest called error: " ++ pprint t) })
